Fix analytic covered by sidebar

--- a/analytics/styles.css
+++ b/analytics/styles.css
@@ -86,6 +86,9 @@ label #cancel{
 #check:checked ~ section{
     margin-left: 250px;
 }
+#check:checked ~ .analytics-panel{
+    margin-left: 250px;
+}
 section {
     background: url("images/BBU.png") no-repeat;
     background-position: center;
@@ -100,9 +103,7 @@ section {
     transition: all .5s;
 }
 /* styles.css */
-body {
-    font-family: Arial, sans-serif;
-}
+
 
 .analytics-panel {
     display: flex;
@@ -114,13 +115,6 @@ body {
     transition: all .5s;
 }
 
-.section {
-    border: 1px solid #ccc;
-    padding: 20px;
-    margin: 10px;
-    width: 30%;
-    display: flex;
-}
 
 h2 {
     margin-bottom: 10px;
